# panoptic_mapping

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  download_flat_dataset.sh  package.xml  panoptic_mapping.rosinstall  panoptic_mapping_https.rosinstall  panoptic_mapping_ssh.rosinstall
panoptic_mapping/: CMakeLists.txt  README.md  package.xml
panoptic_mapping/proto/panoptic_mapping/: ClassLayer.proto  Submap.proto  SubmapCollection.proto
panoptic_mapping/src/common/: camera.cpp  class_voxel_layer.cpp  input_data_user.cpp  label_handler.cpp
panoptic_mapping/src/core/: camera.cpp  planning_interface.cpp  submap.cpp  submap_bounding_volume.cpp  submap_collection.cpp  submap_id.cpp
panoptic_mapping/src/integration/: class_projective_tsdf_integrator.cpp  mesh_integrator.cpp  projection_interpolators.cpp  projective_tsdf_integrator.cpp  single_tsdf_integrator.cpp
panoptic_mapping/src/integrator/: class_projective_integrator.cpp  integrator_base.cpp  integrator_factory.cpp  mesh_integrator.cpp  naive_integrator.cpp  pointcloud_integrator_factory.cpp  projection_interpolators.cpp  projective_integrator.cpp  projective_multi_tsdf_integrator.cpp  single_tsdf_integrator.cpp
panoptic_mapping/src/labels/: csv_label_handler.cpp  label_handler_base.cpp  null_label_handler.cpp  range_label_handler.cpp
panoptic_mapping/src/map/: instance_id.cpp  submap.cpp  submap_bounding_volume.cpp  submap_collection.cpp  submap_id.cpp  tracked_instance_info.cpp
panoptic_mapping/src/map_management/: activity_manager.cpp  layer_manipulator.cpp  map_manager.cpp  null_map_manager.cpp  tsdf_registrator.cpp
panoptic_mapping/src/planning/: planning_interface.cpp
panoptic_mapping/src/preprocessing/: detectron_id_tracker.cpp  detectron_tracking_info.cpp  geometric_edge_refiner.cpp  ground_truth_id_tracker.cpp  label_handler.cpp  projective_id_tracker.cpp  single_tsdf_tracker.cpp  tracking_info.cpp
panoptic_mapping/src/registration/: tsdf_registrator.cpp
panoptic_mapping/src/submap_allocation/: monolithic_freespace_allocator.cpp  null_submap_allocator.cpp  semantic_submap_allocator.cpp
panoptic_mapping/src/tools/: data_writer.cpp  evaluation_data_writer.cpp  log_data_writer.cpp  map_renderer.cpp  null_data_writer.cpp  planning_interface.cpp  serialization.cpp
panoptic_mapping/src/tracking/: detectron_id_tracker.cpp  geometric_edge_refiner.cpp  ground_truth_id_tracker.cpp  projective_id_tracker.cpp  single_tsdf_ground_truth_id_tracker.cpp  single_tsdf_panoptic_id_tracker.cpp  single_tsdf_tracker.cpp  tracking_info.cpp
panoptic_mapping/test/: map.cpp  serialization.cpp
panoptic_mapping/tests/: save_submap_tests.cpp  serialization_tests.cpp  test_utils.h
panoptic_mapping_msgs/: CMakeLists.txt  README.md  package.xml
panoptic_mapping_msgs/msg/: DetectronLabel.msg  DetectronLabels.msg  LabelEntry.msg  SerializedMap.msg
panoptic_mapping_msgs/srv/: GetBlockindex.srv  Input.srv  RenderCameraImage.srv  SetVisualizationMode.srv
panoptic_mapping_ros/: CMakeLists.txt  README.md  package.xml
panoptic_mapping_ros/app/: getting_data_demo_node.cpp  panoptic_mapper_node.cpp  panoptic_mapper_pclpub_node.cpp  test.cpp
panoptic_mapping_ros/app/tools/: flat_semantic_labelling.py  rio_player.py  rio_setup_helper.py  waypoint_dataset_generator.py
panoptic_mapping_ros/cfg/: devel_mapper_cfg.yaml  devel_vis.rviz
panoptic_mapping_ros/cfg/flat_dataset/: airsim.yaml  segmentation_id_list.csv  visualization.rviz
panoptic_mapping_ros/config/: devel_mapper.yaml  devel_mapper_cfg.yaml  devel_mapper_detectron.yaml  devel_mapper_rio.yaml  devel_vis.rviz  test_detectron_ids.rviz
panoptic_mapping_ros/config/mapper/: airsim.yaml  demo.yaml  detectron.yaml  devel.yaml  exp1_detectron.yaml  exp1_gt.yaml  exp2_detectron.yaml  exp2_fusion.yaml  exp2_gt.yaml  exp2_multi.yaml  exp2_single.yaml  exp3_detectron.yaml  exp3_gt.yaml  flat_detectron.yaml  flat_groundtruth.yaml  gt_multires.yaml  gt_seg.yaml  large_flat.yaml  qual_vis.yaml  rio.yaml  rio_detectron.yaml  rio_fusion.yaml  rio_groundtruth.yaml  rio_gt.yaml  rio_single.yaml  scannetv2_detectron.yaml  scannetv2_single_tsdf.yaml  scannetv2_single_tsdf_count_iou.yaml  single_tsdf.yaml  single_tsdf_groundtruth.yaml  video_det.yaml  video_gt.yaml  video_rio_det.yaml  vis.yaml
panoptic_mapping_ros/config/rviz/: demo.rviz  (+5 more)
panoptic_mapping_ros/launch/: generate_flat_dataset.launch  parse_flat_to_airsim.launch  play_flat_dataset.launch  play_rio_dataset.launch  run.launch  run_demo.launch  run_flat.launch  voxblox_run_flat.launch
panoptic_mapping_ros/msg/: DetectronLabel.msg  DetectronLabels.msg
panoptic_mapping_ros/src/: panoptic_mapper.cpp
panoptic_mapping_ros/tools/: flat_semantic_labelling.py  path_visualizer.py  waypoint_dataset_generator.py
panoptic_mapping_tools/: CMakeLists.txt  package.xml
panoptic_mapping_tools/launch/: play_flat_dataset.launch  play_rio_dataset.launch
panoptic_mapping_tools/scripts/: Notes.txt
panoptic_mapping_utils/: CMakeLists.txt  README.md  package.xml
panoptic_mapping_utils/app/: mesh_saver_node.cpp  multi_map_evaluation.cpp  single_map_evaluation.cpp
panoptic_mapping_utils/config/: evaluate_panmap.rviz
panoptic_mapping_utils/launch/: airsim_semseg.launch  display_panmap.launch  evaluate_panmap.launch  evaluate_series.launch  evaluate_series_scannetv2.launch  generate_flat_dataset.launch  parse_flat_to_airsim.launch  play_flat_dataset.launch  play_rio_dataset.launch  play_scannetv2_dataset.launch  scannnet_0354.launch  scannnet_0354_pseudolabels.launch  scannnet_0354_uncertmap.launch  scannnet_0354_uncertrender.launch  scannnet_0354_voxelidrender.launch  scannnet_geofeatures.launch  scannnet_mapping.launch  scannnet_predrender.launch  scannnet_uncertmap.launch  scannnet_uncertrender.launch  scannnet_visualizer.launch  scannnet_voxelidrender.launch
panoptic_mapping_utils/scripts/: download_flat_dataset.sh  evaluate_multiple_maps.sh  rio_eval.sh  run_both.sh  run_experiments_scannetv2.sh  run_flat_pan.sh  run_rio_pan.sh  setup_airsim.sh
panoptic_mapping_utils/src/: mesh_saver.cpp
(+251 files in other folders)
