<?xml version="1.0"?>
<package format="2">
  <name>panoptic_mapping</name>
  <version>0.0.0</version>
  <description>Prototyping a panoptic metric map. </description>

  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>voxgraph</depend>
  <depend>voxgraph_msgs</depend>
  <depend>cblox</depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>protobuf_catkin</depend>

  <export>
  </export>
</package>
