<?xml version="1.0"?>
<package format="2">
  <name>panoptic_mapping_msgs</name>
  <version>0.0.0</version>
  <description>Utilities to setup and run data for panoptic mapping. </description>
  
  <author email="schmluk@mavt.ethz.ch">Lukas Schmid</author>
  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>voxblox_msgs</depend>

  <export>
  </export>
</package>
